<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    
    <!-- Opciones para usuario anónimo -->
    <item
        android:id="@+id/menu_create_account"
        android:title="@string/register"
        android:visible="true"
        app:showAsAction="never" />

    <!-- Opciones para usuario autenticado -->

    <item
        android:id="@+id/menu_calendar"
        android:title="@string/calendar"
        android:visible="false"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_logout"
        android:title="@string/logout"
        android:visible="false"
        app:showAsAction="never" />

    <!-- Menú de ajustes -->
    <item
        android:id="@+id/menu_settings"
        android:title="@string/settings"
        app:showAsAction="never">
        <menu>
            <item
                android:id="@+id/menu_language"
                android:title="@string/language">
                <menu>
                    <item
                        android:id="@+id/menu_language_es"
                        android:title="@string/spanish"
                        app:showAsAction="never" />
                    <item
                        android:id="@+id/menu_language_en"
                        android:title="@string/english"
                        app:showAsAction="never" />
                </menu>
            </item>
        </menu>
    </item>
</menu>
